aws/ec2/main.tf
# Bastion SG: Allow SSH from anywhere (or your IP)
resource "aws_security_group" "bastion_sg" {
  name        = var.bastion_sg_name
  description = "Allow SSH from public to Bastion"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH from allowed CIDR"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.bastion_ssh_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "private_sg" {
  name        = var.private_sg_name
  description = "Allow internal node communication + SSH from Bastion"
  vpc_id      = var.vpc_id

  # SSH from Bastion
  ingress {
    description     = "SSH from Bastion SG"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }

  # Allow all TCP traffic between nodes in same SG
  ingress {
    description = "Allow access to Jenkins UI"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # ⚠️ open to all — restrict in production
  }

  # Allow ICMP (ping) from self
  ingress {
    description = "Allow ping (ICMP) from self"
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    self        = true
  }

  # Egress: allow all
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_instance" "bastion_vm" {
  ami                    = "ami-054b7fc3c333ac6d2"
  instance_type          = var.instance_type
  subnet_id              = var.public_subnet_id
  key_name               = "gurjit-ed25519"
  vpc_security_group_ids = [aws_security_group.bastion_sg.id]
  iam_instance_profile   = "bastion-ssm-profile"

  user_data = <<-EOF
              #!/bin/bash
              mkdir -p /home/ec2-user/.ssh

              for i in {1..5}; do
                aws ssm get-parameter \
                  --name "/infra/infra-ssh-key" \
                  --with-decryption \
                  --region us-west-2 \
                  --query "Parameter.Value" \
                  --output text > /home/ec2-user/.ssh/infra-ssh-key.pem && break
                sleep 5
              done

              chown ec2-user:ec2-user /home/ec2-user/.ssh/infra-ssh-key.pem
              chmod 600 /home/ec2-user/.ssh/infra-ssh-key.pem
              EOF

  tags = {
    Name = "bastion"
    Env  = "dev"
    Role = "ssh access"
  }
}

resource "aws_instance" "ansible_vm" {
  ami                    = var.ami
  instance_type          = "t2.medium"
  subnet_id              = var.public_subnet_id
  vpc_security_group_ids = [aws_security_group.private_sg.id]
  key_name               = var.key_name

  root_block_device {
    volume_size           = 20
    volume_type           = "gp3"
    delete_on_termination = true
  }

  user_data = file("${path.module}/../scripts/install_ansible.sh")

  tags = {
    Name = "ansible"
    Env  = "dev"
    Role = "automation"
  }
}

resource "aws_instance" "jenkins" {
  ami                    = var.ami
  instance_type          = "t2.medium"
  subnet_id              = var.public_subnet_id
  vpc_security_group_ids = [aws_security_group.private_sg.id]
  key_name               = var.key_name

  root_block_device {
    volume_size           = 50
    volume_type           = "gp3"
    delete_on_termination = true
  }

  tags = {
    Name = "jenkins"
    env  = "dev"
    Role = "cicd"
  }
}
